--- a/v2/pyproject.toml
+++ b/v2/pyproject.toml
@@ -8,12 +8,7 @@ dependencies = [
 name = "zarr-comparison-v2"
 version = "0.1.0"
 
-authors = [
-    {name = "0xSwego - dClimate", email = "0xSwego@gmail.com"},
-]
+authors = [{ name = "0xSwego - dClimate", email = "0xSwego@gmail.com" }]
 requires-python = "==3.12.*"
 readme = "README.md"
-license = {text = "MIT"}
-
-[tool.pdm]
-distribution = false
+license = { text = "MIT" }
