--- a/manual/pyproject.toml
+++ b/manual/pyproject.toml
@@ -1,5 +1,8 @@
 [project]
-dependencies = ["ipykernel>=6.29.5", "requests>=2.31"]
+dependencies = [
+    "requests>=2.31",
+    "ipykernel>=6.29.5",
+]
 name = "zarr-comparison-manual"
 version = "0.1.0"
 
