--- a/zarr_v3-hamt_v3/pyproject.toml
+++ b/zarr_v3-hamt_v3/pyproject.toml
@@ -2,13 +2,14 @@
 dependencies = [
     "xarray~=2025.3.0",
     "zarr>=3",
-    "py-hamt @ git+https://github.com/dClimate/py-hamt.git@e2cf99cde8a599e224b7be3aa70401dc5b215598",
     "ipykernel>=6.29.5",
+    "multiformats>=0.3.1.post4",
+    "py-hamt @ git+https://github.com/dClimate/py-hamt.git@refactor-swap-requests-with-aiohttp",
 ]
 name = "zarr-comparison-v3"
 version = "0.1.0"
 
-authors = [{name = "0xSwego - dClimate", email = "0xSwego@gmail.com"}]
+authors = [{ name = "0xSwego - dClimate", email = "0xSwego@gmail.com" }]
 requires-python = "==3.12.*"
 readme = "README.md"
-license = {text = "MIT"}
+license = { text = "MIT" }
